--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@portabletext/react": "^5.0.0",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.15.0",
     "next": "16.0.3",
+    "next-sanity": "^11.6.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sanity": "^4.15.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
