--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sanity": "^4.15.0",
+    "sanity-plugin-cloudinary": "^1.4.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
