--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@portabletext/react": "^5.0.0",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.15.0",
+    "form-data": "^4.0.5",
+    "framer-motion": "^12.23.24",
+    "googleapis": "^166.0.0",
+    "lenis": "^1.3.15",
     "next": "16.0.3",
     "next-sanity": "^11.6.6",
+    "node-fetch": "^2.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-ga4": "^2.1.0",
     "sanity": "^4.15.0",
     "styled-components": "^6.1.19"
   },
