--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.15.0",
     "form-data": "^4.0.5",
-    "framer-motion": "^12.23.24",
     "googleapis": "^166.0.0",
     "next": "16.0.3",
     "next-sanity": "^11.6.6",
@@ -22,8 +21,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-ga4": "^2.1.0",
-    "sanity": "^4.15.0",
-    "styled-components": "^6.1.19"
+    "sanity": "^4.15.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
