--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "form-data": "^4.0.5",
     "googleapis": "^166.0.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "next-sanity": "^11.6.6",
     "node-fetch": "^2.7.0",
     "react": "19.2.0",
